--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a href="https://www.instagram.com/_mr_d.i.n.e.s.h/" class="tm-social-link"><i class="fa fa-instagram"></i></a>
                     <a href="https://www.twitter.com/mrdinesh0815" class="tm-social-link"><i class="fa fa-twitter"></i></a>
                     <a href="https://www.linkedin.com/in/dinesh-e-141970229" class="tm-social-link"><i class="fa fa-linkedin"></i></a>
-                    <a href="https://www.codincity.com" target="_blank"> <h1> codincity Homepage </h1> </a>
+                   <a href="https://www.website.com/salmansallu.ml" class="tm-social-link"><i class="fa fa-website"></i></a>
                 </div>
 
             </div>
