--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="row cb-slideshow-text-container ">
             <div class="tm-content col-xl-6 col-sm-8 col-xs-8 ml-auto section">
                 <header class="mb-5">
-                    <h1 style="color: black; background-color: red;"> DINESH</mh1>
+                    <h1> DINESH</mh1>
                 </header>
                 <P class="mb-5">“If you don’t give up, You still have a Chance to Win. Giving up is a Great Failure.”
                     </P>
