--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
             <p><a href="mailto:dineshroman23@gmail.com">E-mail Me</a></p> </p>
         </div>
     </div>
+    <script type="text/javascript">
+    (function(d, m){
+        var kommunicateSettings = 
+            {"appId":"1b333000c07aa20939cd863c846bddef9","popupWidget":true,"automaticChatOpenOnNavigation":true};
+        var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
+        s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
+        var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
+        window.kommunicate = m; m._globals = kommunicateSettings;
+    })(document, window.kommunicate || {});
+/* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
+</script>
 </body>
 
 <script type="text/javascript" src="js/particles.js"></script>
