--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>DINESH Portfolio</title>
+    <title>DINESH.E Portfolio</title>
  
     <link rel="shortcut icon" type="image/jpg" href="img/profile.ico"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
@@ -36,7 +36,7 @@
         <div class="row cb-slideshow-text-container ">
             <div class="tm-content col-xl-6 col-sm-8 col-xs-8 ml-auto section">
                 <header class="mb-5">
-                    <h1> DINESH</mh1>
+                    <h1> DINESH.E</mh1>
                 </header>
                 <P class="mb-5">“If you don’t give up, You still have a Chance to Win. Giving up is a Great Failure.”
                     </P>
